# delta

./: .gitignore  ARCHITECTURE.md  BEST_PRACTICES.md  CONTRIBUTING.md  LICENSE  README.md  application_state.py  cli.py  core.py  default_settings.json  delta.py  gui.py  pattern.py  pyproject.toml  report_coverage.py  styles.py  widgets.py  window_helpers.py
.github/workflows/: ci.yml
core/: __init__.py  analysis.py  backups.py  config.py  fs.py  llm.py  patching.py  workflow.py
gui/: __init__.py  chat_panel.py  common.py  files_panel.py  logs_panel.py  menu_bar.py  popups.py  runner.py  sessions_panel.py  settings_panel.py  tutorial.py
tests/: conftest.py  test_backup.py  test_cli.py  test_core.py  test_filedig.py  test_git_backup.py  test_gui_events.py  test_pattern.py  test_state.py  test_widgets.py
