[project]
name = "deltatool"
version = "0.1.0"
description = "LLM-powered file modification tool with GUI and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "versus",
    "imgui-bundle>=1.5.0",
]

[project.scripts]
delta = "delta:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["*.json"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
